--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Mindennapi-problemak_74055
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 74055-h/images/cover.jpg
 creator:
   author:
     agent_name: Szomaházy, István
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/57324
     wikipedia: https://hu.wikipedia.org/wiki/Szomah%C3%A1zy_Istv%C3%A1n
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74055#Mindennapi-problemak
 gutenberg_issued: '2024-07-15'
 gutenberg_type: Text
 identifiers:
